package org.examplorfotg.springbootdemo.entity;

import lombok.Data;

@Data
public class RecordName extends Usertransactions{

    private String instaffname;
    private String outstaffname;
    private String productname;
    private String warehousename;
    private String goodstypename;
}
