@startuml
'https://plantuml.com/class-diagram

interface Serializable
entity Inventory{
    -serialVersionUID:long
    -productID：Integer
    -WarehouseID：Integer
    -Quantity：Integer
    -UpdatedTime：LocalDateTime
}
entity Products{
    -serialVersionUID:long
    -productId:Integer
    -productName:String
    -productDescription:String
    -purchasePrice:BigDecimal
    -salesPrice:BigDecimal
    -supplier:String
    -productsType:Integer
    }
entity Warehouses
{
  -serialVersionUID:long
    -id:Integer
    -name:String
    -remark:String
}
class Inventorycheck{
    -serialVersionUID:long
    -inventorycheckid:Integer
    -productid:Integer
    -checkedquantity:Integer
    -checkdate:LocalDateTime
    -checker:String
    }
entity Goodstype{
    -serialVersionUID:long
    -id:Integer
    -name:String
    -remark:String
    }
class Inventoryalerts
{
   -serialVersionUID:long
   -alertid:Integer
   -productid:Integer
   -lowerlimit:Integer
   -upperlimit:Integer
   -alertlevel:String
}
entity User {
-Id:Integer
-no:String
-name:String
-password:String
-age:Integer
-sex:Integer
-phone: String
-roleId:Integer
-isvalid:String
}

entity Menu{
-serialVersionUID:long
-id:Integer
-menucode:String
-menuname:String
-menulevel:String
-parentMenuCode:String
-function:String
-role:String
-menucomponent:String
-menuicon:String
}
entity Loanregister
{
    -serialVersionUID:long
    -loanid:Integer
    -productid:Integer
    -quantity:Integer
    -date:LocalDateTime
    -borrower:String
    -bor:String
}

entity RecordName
Serializable<|.. User
Serializable<|.. Goodstype
Serializable<|..  Products
Serializable<|..  User
Serializable<|..  Menu
Serializable<|..  Usertransactions
Serializable<|..  Warehouses
Serializable<|..  Inventorycheck
Serializable<|..  Inventoryalerts
Serializable<|..  Inventory
Serializable<|..  Loanregister
entity RecordName{
    -username:String
    -String staffname:String
    -String productname:String
    -String warehousename:String
    -String goodstypename:String
}

class Usertransactions{
-serialVersionUID:long
-transactionId:Integer
-userId:Integer
-productId:Integer
-warehouseId:Integer
-staffId:Integer
-quantity:Integer
-time:LocalDateTime
-remark:String
-action:String
}



Usertransactions<|--  RecordName
@enduml